--- a/_assignments/assignment_3/Assignment3.ipynb
+++ b/_assignments/assignment_3/Assignment3.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -275,15 +275,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C\n",
-      "69.58235611017399\n"
+      "F\n",
+      "20.53341366949637\n"
      ]
     }
    ],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -346,14 +346,14 @@
      "output_type": "stream",
      "text": [
       "The flip was Tails\n",
-      "0.7109030722711847\n"
+      "0.8831822328409942\n"
      ]
     }
    ],
    "source": [
     "# Your code here \n",
     "p = 0.5\n",
-    "x = np.random.uniform(low = 0, high = 1)\n",
+    "x = np.random.uniform()\n",
     "\n",
     "if(x < p):\n",
     "    print(\"The flip was Heads\")\n",
