--- a/lecture_02/lecture_02.ipynb
+++ b/lecture_02/lecture_02.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlog2\u001b[49m(\u001b[32m8\u001b[39m))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mlog2\u001b[49m(\u001b[32m8\u001b[39m))\n",
       "\u001b[31mNameError\u001b[39m: name 'log2' is not defined"
      ]
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
     "# We use the \"=\" symbol to store the dataset in the working environment under the name \"carfeatures\"\n",
     "\n",
     "carfeatures = pd.read_csv(\"data/features.csv\")\n",
-    "\n",
+    "df_germany = pd.read_csv(\"quiz_data/germany_emission.csv\")\n",
     "data_sci_courses = pd.read_csv(\"data/features.csv\") # not a good name for this variable..."
    ]
   },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2159,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2289,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2542,7 +2542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4101,225 +4101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "mpg",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "cylinders",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "displacement",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "weight",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "acceleration",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "e2a30faf-b1e6-4ed0-8ff7-1dc1736b16da",
-       "rows": [
-        [
-         "count",
-         "398.0",
-         "398.0",
-         "398.0",
-         "398.0",
-         "398.0"
-        ],
-        [
-         "mean",
-         "23.514572864321607",
-         "5.454773869346734",
-         "193.42713567839195",
-         "2970.424623115578",
-         "15.568090452261307"
-        ],
-        [
-         "std",
-         "7.815984312565782",
-         "1.7010042445332094",
-         "104.26868251535464",
-         "846.8417741973271",
-         "2.7576889298126765"
-        ],
-        [
-         "min",
-         "9.0",
-         "3.0",
-         "68.0",
-         "1613.0",
-         "8.0"
-        ],
-        [
-         "25%",
-         "17.5",
-         "4.0",
-         "104.25",
-         "2223.75",
-         "13.825000000000001"
-        ],
-        [
-         "50%",
-         "23.0",
-         "4.0",
-         "148.5",
-         "2803.5",
-         "15.5"
-        ],
-        [
-         "75%",
-         "29.0",
-         "8.0",
-         "262.0",
-         "3608.0",
-         "17.175"
-        ],
-        [
-         "max",
-         "46.6",
-         "8.0",
-         "455.0",
-         "5140.0",
-         "24.8"
-        ]
-       ],
-       "shape": {
-        "columns": 5,
-        "rows": 8
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mpg</th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>398.000000</td>\n",
-       "      <td>398.000000</td>\n",
-       "      <td>398.000000</td>\n",
-       "      <td>398.000000</td>\n",
-       "      <td>398.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>23.514573</td>\n",
-       "      <td>5.454774</td>\n",
-       "      <td>193.427136</td>\n",
-       "      <td>2970.424623</td>\n",
-       "      <td>15.568090</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>7.815984</td>\n",
-       "      <td>1.701004</td>\n",
-       "      <td>104.268683</td>\n",
-       "      <td>846.841774</td>\n",
-       "      <td>2.757689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>68.000000</td>\n",
-       "      <td>1613.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>17.500000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>104.250000</td>\n",
-       "      <td>2223.750000</td>\n",
-       "      <td>13.825000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>23.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>148.500000</td>\n",
-       "      <td>2803.500000</td>\n",
-       "      <td>15.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>262.000000</td>\n",
-       "      <td>3608.000000</td>\n",
-       "      <td>17.175000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>46.600000</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>455.000000</td>\n",
-       "      <td>5140.000000</td>\n",
-       "      <td>24.800000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              mpg   cylinders  displacement       weight  acceleration\n",
-       "count  398.000000  398.000000    398.000000   398.000000    398.000000\n",
-       "mean    23.514573    5.454774    193.427136  2970.424623     15.568090\n",
-       "std      7.815984    1.701004    104.268683   846.841774      2.757689\n",
-       "min      9.000000    3.000000     68.000000  1613.000000      8.000000\n",
-       "25%     17.500000    4.000000    104.250000  2223.750000     13.825000\n",
-       "50%     23.000000    4.000000    148.500000  2803.500000     15.500000\n",
-       "75%     29.000000    8.000000    262.000000  3608.000000     17.175000\n",
-       "max     46.600000    8.000000    455.000000  5140.000000     24.800000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'carfeatures' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# \"describe\" computes the count, mean, std, min, 25% quantile, 50%, 75%, max\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# automatically excludes variables with text values\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# otherwise includes all numeric variables\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m display( \u001b[43mcarfeatures\u001b[49m.describe() )\n",
+      "\u001b[31mNameError\u001b[39m: name 'carfeatures' is not defined"
+     ]
     }
    ],
    "source": [
@@ -4341,7 +4135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4568,7 +4362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4831,7 +4625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5059,7 +4853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5329,7 +5123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
