--- a/_assignments/assignment_4/Assignment4.ipynb
+++ b/_assignments/assignment_4/Assignment4.ipynb
@@ -85,7 +85,18 @@
    "outputs": [],
    "source": [
     "# Write your answer here\n",
-    "\n"
+    "top_picks_titles = []\n",
+    "top_picks_rating = []\n",
+    "N=len(movie_ratings)\n",
+    "\n",
+    "for i in range(N):\n",
+    "    if movie_ratings[i] >= 8:\n",
+    "        top_picks_titles.append(movie_titles[i])\n",
+    "        top_picks_rating.append(movie_ratings[i])\n",
+    "        continue\n",
+    "\n",
+    "print(top_picks_rating)\n",
+    "print(top_picks_titles)"
    ]
   },
   {
@@ -117,7 +128,15 @@
    "outputs": [],
    "source": [
     "# Write your answer here\n",
-    "\n"
+    "top_ratings_arr = np.array(top_picks_rating)\n",
+    "\n",
+    "num_top = np.size(top_picks_rating)\n",
+    "avg_top = np.mean(top_picks_rating)\n",
+    "max_top = np.max(top_picks_rating)\n",
+    "\n",
+    "centered_ratings = top_ratings_arr - avg_top\n",
+    "\n",
+    "print(centered_ratings > 0)"
    ]
   },
   {
@@ -151,8 +170,18 @@
    "outputs": [],
    "source": [
     "# Write your answer here\n",
+    "vec_x = np.linspace(0, 2*np.pi, 100)\n",
+    "vec_y1 = np.sin(vec_x)\n",
+    "vec_y2 = np.cos(vec_x)\n",
+    "vec_y3 = np.sin(vec_x) + np.cos(vec_x)\n",
+    "list_vectors = [[vec_y1, \"sin(x)\"], [vec_y2, \"cos(x)\"], [vec_y3, \"sin(x) + cos(x)\"]]\n",
     "\n",
-    "\n"
+    "for vec, lab in list_vectors:\n",
+    "    plt.plot(vec_x, vec, label = lab)\n",
+    "    plt.xlabel(\"x\")\n",
+    "    plt.ylabel(\"y\")\n",
+    "    plt.title(\"Trig Functions\")\n",
+    "    plt.legend()"
    ]
   },
   {
@@ -210,8 +239,9 @@
    "outputs": [],
    "source": [
     "# Write your answer here\n",
-    "\n",
-    "\n"
+    "for name, r1, r2, r3 in zip(player_names, round1, round2, round3):\n",
+    "    print(name + \"'s average score: \" + str(round(np.mean([r1, r2, r3]), 2)))\n",
+    "    continue"
    ]
   },
   {
@@ -286,7 +316,18 @@
    "outputs": [],
    "source": [
     "# Write your answer here\n",
-    "\n"
+    "import os\n",
+    "\n",
+    "names = os.listdir(file_path)\n",
+    "df_list = []\n",
+    "\n",
+    "for name in names:\n",
+    "    df = pd.read_csv(file_path + name)\n",
+    "    df_list.append(df)\n",
+    "    continue\n",
+    "\n",
+    "print(len(df_list))\n",
+    "print(df.shape)"
    ]
   }
  ],
