Update practice quiz 2

--- a/_quizzes/practice_quiz_2/practice_quiz_2.ipynb
+++ b/_quizzes/practice_quiz_2/practice_quiz_2.ipynb
@@ -37,12 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "95f4adf0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I will abide by Emory's code of conduct\n"
+     ]
+    }
+   ],
    "source": [
-    "print()"
+    "print(\"I will abide by Emory's code of conduct\")"
    ]
   },
   {
@@ -86,14 +94,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0751ef57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We rolled a 2.\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
+    "import numpy as np\n",
+    "x = np.random.uniform()\n",
+    "roll = 0\n",
     "\n",
-    "\n"
+    "if x < 0.25:\n",
+    "    roll = 1\n",
+    "elif x < 0.5:\n",
+    "    roll = 2\n",
+    "elif x < 0.75:\n",
+    "    roll = 3\n",
+    "else:\n",
+    "    roll = 4\n",
+    "\n",
+    "print(f\"We rolled a {roll}.\")"
    ]
   },
   {
@@ -131,14 +159,29 @@
    "execution_count": null,
    "id": "8fad86b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "num_rolls = 0\n",
     "\n",
     "\n",
     "# your code here\n",
+    "threect = 0\n",
     "\n",
-    "\n"
+    "while threect < 2:\n",
+    "    num_rolls = num_rolls + 1\n",
+    "    roll = np.random.choice([1, 2, 3, 4])\n",
+    "    if roll == 3:\n",
+    "        threect = threect + 1\n",
+    "\n",
+    "print(num_rolls)"
    ]
   },
   {
@@ -170,12 +213,32 @@
    "execution_count": null,
    "id": "ed5fc10a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "[np.int64(3), np.int64(1), np.int64(1), np.int64(3), np.int64(1), np.int64(3), np.int64(4), np.int64(1), np.int64(1), np.int64(2), np.int64(1), np.int64(3), np.int64(3)]\n"
+     ]
+    }
+   ],
    "source": [
     "num_rolls = 0\n",
     "\n",
     "# your code here\n",
-    "\n"
+    "r1 = 0\n",
+    "r2 = 0\n",
+    "rolls = []\n",
+    "while not (r1 == 3 and r2 == 3):\n",
+    "    roll = np.random.choice([1, 2, 3, 4])\n",
+    "    r1 = r2\n",
+    "    r2 = roll\n",
+    "    num_rolls = num_rolls + 1\n",
+    "    rolls.append(roll)\n",
+    "\n",
+    "print(num_rolls)\n",
+    "print(rolls)"
    ]
   },
   {
@@ -198,16 +261,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "bd5002f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n: 7\n",
+      "sum: 28\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "n = random.randint(5, 100) # random number 5 <= n <= 100\n",
     "\n",
     "# your code below\n",
-    "\n"
+    "sum = 0\n",
+    "for i in range(n):\n",
+    "    sum = sum + n - i \n",
+    "\n",
+    "print(\"n:\", n)\n",
+    "print(\"sum:\", sum)"
    ]
   },
   {
@@ -228,10 +305,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "515c6bad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5, -2, 0, None, 2, None, None, 40, 30, -10]\n"
+     ]
+    }
+   ],
    "source": [
     "temp_data = [-5, -2, 0, 1000, 2, -12, 44, 40, 30, -10]\n",
     "min_val = -10\n",
@@ -242,7 +327,11 @@
     "var2 = \"None\" # <--- var2 is a string with the letters, \"N\", \"o\", \"n\", and \"e\"\n",
     "\n",
     "# your code here\n",
-    "\n"
+    "for i in range(len(temp_data)):\n",
+    "    if temp_data[i] < min_val or temp_data[i] > max_val:\n",
+    "        temp_data[i] = var1\n",
+    "\n",
+    "print(temp_data)\n"
    ]
   },
   {
@@ -269,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "4418e07a",
    "metadata": {},
    "outputs": [],
@@ -286,24 +375,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "62156ce9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.857142857142857\n",
+      "7.857142857142857\n"
+     ]
+    }
+   ],
    "source": [
     "# your Approach 1\n",
-    "\n"
+    "num = 0\n",
+    "den = 0\n",
+    "for i in range(len(temp_data)):\n",
+    "    if temp_data[i] > max_val:\n",
+    "        continue\n",
+    "    elif temp_data[i] < min_val:\n",
+    "        continue\n",
+    "    else:\n",
+    "        num = num + temp_data[i]\n",
+    "        den = den + 1\n",
+    "\n",
+    "print(num/den)\n",
+    "print(approach_1_expected)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "09326704",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: error detected in sensor\n",
+      "-2.3333333333333335\n",
+      "-2.3333333333333335\n"
+     ]
+    }
+   ],
    "source": [
     "# your Approach 2\n",
-    "\n"
+    "num = 0\n",
+    "den = 0\n",
+    "for i in range(len(temp_data)):\n",
+    "    if temp_data[i] > max_val:\n",
+    "        print(\"Warning: error detected in sensor\")\n",
+    "        break\n",
+    "    elif temp_data[i] < min_val:\n",
+    "        print(\"Warning: error detected in sensor\")\n",
+    "        break\n",
+    "    else:\n",
+    "        num = num + temp_data[i]\n",
+    "        den = den + 1\n",
+    "\n",
+    "print(num/den)\n",
+    "print(approach_2_expected)"
    ]
   }
  ],
